<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdFragment">

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.958" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="330dp"
        android:layout_height="168dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.133">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/search_appointment_by_owner"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/ownerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/owner_name"
            android:inputType="text"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="330dp"
        android:layout_height="102dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.739">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:insetLeft="10dp"
            android:insetRight="10dp"
            android:text="@string/search" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="306dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/search_in_date_range_optional"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/timeZoneSpinner"
            android:layout_width="match_parent"
            android:layout_height="54dp" />

        <TextView
            android:id="@+id/appts_between"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/appointments_between"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/startText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_time"
            android:inputType="text"
            android:text="" />

        <TextView
            android:id="@+id/andID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/and"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/endText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_time2"
            android:inputType="text"
            android:text="" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>